--- a/public/css/global.css
+++ b/public/css/global.css
@@ -23,6 +23,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   touch-action: manipulation;
+  overflow-x: hidden;
 }
 
 body {
